--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Canvas Particle Animation</title>
-  
-  
-  
+  <title>Christine Baba</title>
       <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
 
-<body>
-  <html>
-
-<head></head>
 
 <body>
   <div id="particle-canvas"></div>
-</body>
-
-</html>
-  <script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
-
-    <script src="js/index.js"></script>
-
+  
+<script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
+<script src="js/index.js"></script>  
 </body>
 </html>
+
+
