--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 
 <body>
-  <div id="particle-canvas"></div>
+<div id="particle-canvas"></div>
+  <div><p>Hello! </p></div>
   
 <script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
 <script src="js/index.js"></script>  
