--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 
 
-<body>
+<body>  
+<div id="container">
 <div id="particle-canvas"></div>
-  <div><p>Hello! </p></div>
+
+<p>Hello! </p>
+</div>
   
 <script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
 <script src="js/index.js"></script>  
