--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 
 <body>  
-<div id="container">
+<div id="container"><p>Hello! </p>
+</div>
 <div id="particle-canvas"></div>
 
-<p>Hello! </p>
-</div>
+
   
 <script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
 <script src="js/index.js"></script>  
