--- a/index.html
+++ b/index.html
@@ -1,22 +1,101 @@
 <!DOCTYPE html>
-<html >
+<html style=" height: 100%">
 <head>
-  <meta charset="UTF-8">
-  <title>Christine Baba</title>
-      <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Constellation</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
+          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
+            integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+    <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
+
+
+    <style>
+        /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
+        html {
+
+        }
+
+        #container-fluid, body {
+            position: relative;
+            height: 100%;
+            width: 100%;
+
+        }
+
+        #overlay {
+            position: relative;
+            height: 100%;
+            width: 100%;
+
+        }
+
+        canvas {
+            overflow: auto;
+            position: absolute;
+            z-index: -1;
+        }
+
+        .content {
+            position: absolute;
+            top: 40vh;
+            z-index: 0;
+            left: 0;
+            padding: 0;
+            width: 100%;
+            text-align: center;
+            visibility: visible;
+
+        }
+
+        h1, i {
+            font-family: 'Bungee Shade', cursive;
+            color: white;
+            font-size: 60px;
+        }
+
+    </style>
+
+
 </head>
 
+<body style="background-image:url(./assets/milkyway.jpg); background-repeat: no-repeat;
+    background-size: 100% 100%;">
 
-<body>  
-<div id="particle-canvas"></div>
-  
-  <p>HELLO</p>
+<div id="container-fluid">
+    <canvas></canvas>
+
+    <div id="overlay">
 
 
-  
-<script src='https://rawgit.com/JulianLaval/canvas-particle-network/master/particle-network.min.js'></script>
-<script src="js/index.js"></script>  
+        <div class="content">
+
+            <h1 class="text-intro animated-middle fadeInUp"><span class="polyfy-title">Under Construction</span></h1>
+
+            <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn">
+                <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+            &nbsp;
+            <a href="https://github.com/christin3" title="Github">
+                <i class="fa fa-github fa-4x " aria-hidden="true"></i></a>
+
+
+        </div>
+
+
+    </div>
+</div>
+
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+<script src="js/index.js"></script>
+
 </body>
 </html>
-
-
