--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
+
 
     <style>
         /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
@@ -60,6 +62,28 @@
             font-size: 60px;
         }
 
+        .typed-cursor{
+            opacity: 1;
+            -webkit-animation: blink 0.7s infinite;
+            -moz-animation: blink 0.7s infinite;
+            animation: blink 0.7s infinite;
+        }
+        @keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-webkit-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-moz-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+
     </style>
 
 
@@ -76,7 +100,7 @@
 
         <div class="content">
 
-            <h1 class="text-intro animated-middle fadeInUp"><span class="polyfy-title">Under Construction</span></h1>
+            <h1 class="text-intro animated-middle fadeInUp"><span class="elementTyped">Under Construction</span></h1>
 
             <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn">
                 <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
@@ -95,6 +119,16 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
 <script src="js/index.js"></script>
+<script>
+    $(function(){
+        $(".elementTyped").typed({
+            strings: ["Under Construction","Check Back Soon!"],
+            typeSpeed: 100,
+            loop: true,
+            backDelay: 1500
+        });
+    });
 
+</script>
 </body>
 </html>
