--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html style=" height: 100%">
 <head>
     <meta charset="UTF-8">
-    <title>Constellation</title>
+    <title>Christine Baba</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
-          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
             integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-    <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
+          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 
 
     <style>
@@ -27,7 +26,6 @@
 
         #container-fluid, body {
             position: relative;
-
 
         }
 
@@ -62,27 +60,6 @@
             font-size: 60px;
         }
 
-        .typed-cursor{
-            opacity: 1;
-            -webkit-animation: blink 0.7s infinite;
-            -moz-animation: blink 0.7s infinite;
-            animation: blink 0.7s infinite;
-        }
-        @keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-webkit-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
-        @-moz-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
-        }
 
     </style>
 
@@ -102,10 +79,10 @@
 
             <h1 class="text-intro animated-middle fadeInUp"><span class="elementTyped">Under Construction</span></h1>
 
-            <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn">
+            <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
                 <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
             &nbsp;
-            <a href="https://github.com/christin3" title="Github">
+            <a href="https://github.com/christin3" title="Github" target="_blank">
                 <i class="fa fa-github fa-4x " aria-hidden="true"></i></a>
 
 
@@ -114,21 +91,35 @@
 
     </div>
 </div>
-
-
-<script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
-<script src="js/index.js"></script>
 <script>
-    $(function(){
+    $(function () {
         $(".elementTyped").typed({
-            strings: ["Under Construction","Check Back Soon!"],
+            strings: ["Under Construction", "Check Back Soon!"],
             typeSpeed: 100,
             loop: true,
             backDelay: 1500
         });
     });
 
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-88450814-1', 'auto');
+    ga('send', 'pageview');
+
 </script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+<script src="js/index.js"></script>
+
 </body>
 </html>
