--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
 
 
     <style>
-        /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-        html {
+        #container-fluid {
+            position: relative;
+            z-index: 0;
 
         }
 
-        #container-fluid, body {
-            position: relative;
+        body {
+            background-attachment: fixed;
+            background-image: url("assets/milkyway.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
 
         }
 
@@ -35,6 +40,7 @@
             position: relative;
             height: 100%;
             width: 100%;
+            background-color: transparent;
 
         }
 
@@ -42,6 +48,7 @@
             overflow: auto;
             position: absolute;
             z-index: -1;
+
         }
 
         .content {
@@ -62,55 +69,63 @@
             font-size: 60px;
         }
 
-        #footer {
-            position : fixed;
-            bottom : 0;
-            height : 40px;
-            margin-top : 40px;
-            text-align: center;
-            width: 100%;
+        h2{
+            font-family: 'Bungee Shade', cursive;
             color: white;
-            font-family: Bungee;
-
+            font-size: 32px;  }
+        #title{
+            text-align: center;
+            margin-top: 50px;
         }
 
+        #nav {
+            background-color: transparent;
+        }
 
     </style>
 
 
 </head>
 
-<body style="background-image:url(./assets/milkyway.jpg); background-repeat: no-repeat;
-    background-size: 100% 100%;">
+<body>
 
 <div id="container-fluid">
-    <canvas></canvas>
+    <canvas id="canvas"></canvas>
+    <div id="container">
+        <div id="overlay">
+            <nav class="navbar navbar-light bg-faded" id="nav">
+                <form class="form-inline float-xs-left">
+                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Home</button>
+                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Resume</button>
+                </form>
+            </nav>
+            <div id="title">
+            <h1>Christine Baba</h1><h2>[ Web Developer, Engineer,  Scientist ]</h2></div>
+            <div class="content">
 
-    <div id="overlay">
 
 
-        <div class="content">
+                <h1 class="text-intro animated-middle fadeInUp"><span class="elementTyped"></span>
+                </h1>
 
-            <h1 class="text-intro animated-middle fadeInUp"><span class="elementTyped">Under Construction</span></h1>
+                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
+                    <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+                &nbsp;
+                <a href="https://github.com/christin3" title="Github" target="_blank">
+                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
+                &nbsp;
+                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
+                    <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
 
-            <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
-                <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
-            &nbsp;
-            <a href="https://github.com/christin3" title="Github" target="_blank">
-                <i class="fa fa-github fa-4x " aria-hidden="true"></i></a>
-
-        </div>
-            <div id="footer">
-
-                 © 2016 &nbsp; Christine Baba
 
             </div>
+
+
         </div>
-
-
-
+    </div>
 </div>
     <script>
+
         $(function () {
             $(".elementTyped").typed({
                 strings: ["Under Construction", "Check Back Soon!"],
