--- a/index.html
+++ b/index.html
@@ -18,73 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
           integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-
-
-    <style>
-        #container-fluid {
-            position: relative;
-            z-index: 0;
-
-        }
-
-        body {
-            background-attachment: fixed;
-            background-image: url("assets/milkyway.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #overlay {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            background-color: transparent;
-
-        }
-
-        canvas {
-            overflow: auto;
-            position: absolute;
-            z-index: -1;
-
-        }
-
-        .content {
-            position: absolute;
-            top: 40vh;
-            z-index: 0;
-            left: 0;
-            padding: 0;
-            width: 100%;
-            text-align: center;
-            visibility: visible;
-
-        }
-
-        h1, i {
-            font-family: 'Bungee Shade', cursive;
-            color: white;
-            font-size: 60px;
-        }
-
-        h2{
-            font-family: 'Bungee Shade', cursive;
-            color: white;
-            font-size: 32px;  }
-        #title{
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        #nav {
-            background-color: transparent;
-        }
-
-    </style>
-
-
+    
 </head>
 
 <body>
@@ -96,7 +30,7 @@
             <nav class="navbar navbar-light bg-faded" id="nav">
                 <form class="form-inline float-xs-left">
                     <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Home</button>
-                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Resume</button>
+                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button" onClick="location.href='http://anothersitehere.com/file.pdf'">Resume</button>
                 </form>
             </nav>
             <div id="title">
