--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-light bg-faded" id="nav">
                 <form class="form-inline float-xs-left">
                     <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Home</button>
-                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button" onClick="location.href='http://anothersitehere.com/file.pdf'">Resume</button>
+                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button" onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">Resume</button>
                 </form>
             </nav>
             <div id="title">
