--- a/index.html
+++ b/index.html
@@ -5,20 +5,11 @@
 
     <title>Christine Baba</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
-            integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-    <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
 
+    <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Bungee" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
-          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
 
     <style>
@@ -29,58 +20,163 @@
         }
 
         body {
-            background-attachment: fixed;
-            background-image: url("assets/milkyway.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #overlay {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            background-color: transparent;
+            font-family: "Shree Devanagari 714";
 
         }
 
         canvas {
-            overflow: auto;
-            position: absolute;
-            z-index: -1;
+            z-index: 1;
+            background-color: transparent;
+            width: 100%;
+            height: 500px;
 
         }
 
         .content {
             position: absolute;
-            top: 40vh;
+            top: 20vh;
             z-index: 0;
             left: 0;
             padding: 0;
             width: 100%;
             text-align: center;
             visibility: visible;
-
-        }
-
-        h1, i {
-            font-family: 'Bungee Shade', cursive;
-            color: white;
-            font-size: 60px;
-        }
-
-        h2{
-            font-family: 'Bungee Shade', cursive;
-            color: white;
-            font-size: 32px;  }
-        #title{
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        #nav {
             background-color: transparent;
+
+        }
+
+        a {
+            font-size: 16px;
+            font-family: "Shree Devanagari 714";
+            color: gray;
+        }
+
+        p {
+            font-family: "Shree Devanagari 714";
+            color: gray;
+        }
+
+        #container1 {
+            background-attachment: fixed;
+            background-image: url("assets/milkyway.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            width: 100%;
+            height: 500px;
+        }
+
+        #container2 {
+            width: 100%;
+            height: 500px;
+            background-attachment: fixed;
+            background-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        #transcontainer2 {
+            width: 100%;
+            height: 300px;
+            background-attachment: fixed;
+            background-image: url("assets/Liberty-Bell-new-tech-101-flat-layers-em.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        #container3 {
+            width: 100%;
+            height: 500px;
+            background-attachment: fixed;
+            background-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        #transcontainer3 {
+            width: 100%;
+            height: 300px;
+            background-attachment: fixed;
+            background-image: url("assets/Cosmic Tree - APOD submission_small.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        #container4 {
+            width: 100%;
+            height: 500px;
+            background-attachment: fixed;
+            background-color: white;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        #transcontainer4 {
+            width: 100%;
+            height: 300px;
+            background-attachment: fixed;
+            background-image: url("assets/PinnaclesGalaxy_Goh_2400.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+        }
+
+        .navbar {
+            position: fixed;
+            width: 100%;
+            z-index: 1;
+            background-color: white;
+
+        }
+
+        #inner {
+            width: 50%;
+            margin: 0 auto;
+            background-image: url("assets/name.jpeg");
+            background-size: 100%;
+            background-repeat: no-repeat;
+
+            background-position: center center;
+        }
+
+        #footer {
+            display: table;
+            text-align: center;
+            margin: auto;
+            width: 960px;
+        }
+
+        .typed-cursor{
+            opacity: 1;
+            -webkit-animation: blink 0.7s infinite;
+            -moz-animation: blink 0.7s infinite;
+            animation: blink 0.7s infinite;
+        }
+        @keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-webkit-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-moz-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
         }
 
     </style>
@@ -89,72 +185,177 @@
 </head>
 
 <body>
-
 <div id="container-fluid">
-    <canvas id="canvas"></canvas>
-    <div id="container">
-        <div id="overlay">
-            <nav class="navbar navbar-light bg-faded" id="nav">
-                <form class="form-inline float-xs-left">
-                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button">Home</button>
-                    <button class="btn btn-sm align-middle btn-outline-secondary" type="button" onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">Resume</button>
-                </form>
-            </nav>
-            <div id="title">
-            <h1>Christine Baba</h1><h2>[ Web Developer, Engineer,  Scientist ]</h2></div>
-            <div class="content">
+
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <a class="navbar-brand" href="#" > <img src="assets/name.jpeg"style="height: 50px; width: 110px"></a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#container2">About</a>
+                <a class="nav-item nav-link" href="#container3">Projects</a>
+                <a class="nav-item nav-link" href="#container4">Contact</a>
+
+                <a class="nav-item nav-link"
+                   onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">
+                    Resume
+                </a>
+            </div>
+        </div>
+
+    </nav>
 
 
-
-                <h1 class="text-intro animated-middle fadeInUp"><span class="elementTyped"></span>
-                </h1>
-
-                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
-                    <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-                &nbsp;
-                <a href="https://github.com/christin3" title="Github" target="_blank">
-                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
-                &nbsp;
-                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
-                    <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
-
+    <div id="container1">
+        <canvas id="canvas"></canvas>
+        <div class="content">
 
             </div>
 
 
         </div>
-    </div>
-</div>
-    <script>
 
-        $(function () {
-            $(".elementTyped").typed({
-                strings: ["Under Construction", "Check Back Soon!"],
-                typeSpeed: 100,
-                loop: true,
-                backDelay: 1500
-            });
-        });
 
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        <div id="container2">
+            <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
+                <div class="col-lg-12 text-center">
+                    <h1 style="padding-top: 10px;">About</h1>
+                    <hr>
 
-        ga('create', 'UA-88450814-1', 'auto');
-        ga('send', 'pageview');
+                    Currently Under Construction. Have a look around! 
+                </div>
+            </div>
 
-    </script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
-    <script src="js/index.js"></script>
+        </div>
+
+        <div id="transcontainer2"></div>
+
+
+        <div id="container3">
+            <div class="col-lg-12 text-center">
+
+                <h1 style="padding-top: 10px;">Projects</h1>
+                <hr>
+            </div>
+        </div>
+
+        <div id="transcontainer3"></div>
+
+        <div id="container4">
+            <div style="height:500px;background-color:white; opacity:.8;font-size:36px">
+
+                <section id="contact">
+                    <div class="container">
+                        <div class="row ">
+                            <div class="col-lg-12 text-center">
+                                <h1 style="padding-top: 10px;">Contact Me</h1>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="row ">
+                            <div class="col-lg-12 ">
+
+                                <form name="sentMessage" id="contactForm" novalidate>
+                                    <div class="row control-group">
+                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+
+                                            <input type="text" class="form-control" placeholder="Name" id="name"
+                                                   required
+                                                   data-validation-required-message="Please enter your name.">
+                                            <p class="help-block text-danger"></p>
+                                        </div>
+
+                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+
+                                            <input type="email" class="form-control" placeholder="Email Address"
+                                                   id="email" required
+                                                   data-validation-required-message="Please enter your email address.">
+                                            <p class="help-block text-danger"></p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row control-group">
+                                        <div class="form-group col-lg-12 floating-label-form-group controls">
+
+                                            <textarea rows="5" class="form-control" placeholder="Message" id="message"
+                                                      required
+                                                      data-validation-required-message="Please enter a message."></textarea>
+                                            <p class="help-block text-danger"></p>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div id="success"></div>
+                                    <div class="row">
+                                        <div class="form-group col-lg-8">
+                                            <button type="submit" class="btn">Send</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <div id="transcontainer4"></div>
+
+
+            <footer>
+                <p style="text-align: center;">
+
+                    <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
+                        <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+
+                    <a href="https://github.com/christin3" title="Github" target="_blank">
+                        <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
+
+                    <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
+                        <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
+
+                </p>
+                <p style="text-align: center;">
+                    © 2017 Christine Baba
+
+                </p>
+
+            </footer>
+        </div>
+        <script>
+
+
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-88450814-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+                integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+                integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+                integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+                crossorigin="anonymous"></script>
+        <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
+        <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+        <script src="js/index.js"></script>
 
 </body>
 </html>
