Polished up under construction

--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
                     <h1 style="padding-top: 10px;">About</h1>
                     <hr>
 
-                    Currently Under Construction. Have a look around! 
+                    Currently Under Construction.
+                    <br>Have a look around! <br>
+                    &#x2661; Christine
                 </div>
             </div>
 
@@ -241,6 +243,10 @@
 
                 <h1 style="padding-top: 10px;">Projects</h1>
                 <hr>
+                Coming Soon, till then check out my GitHub.
+                <br>
+                <a href="https://github.com/christin3" title="Github" target="_blank">
+                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
             </div>
         </div>
 
