--- a/index.html
+++ b/index.html
@@ -157,48 +157,6 @@
             width: 960px;
         }
 
-        .typed-cursor {
-            opacity: 1;
-            -webkit-animation: blink 0.7s infinite;
-            -moz-animation: blink 0.7s infinite;
-            animation: blink 0.7s infinite;
-        }
-
-        @keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-webkit-keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-moz-keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
 
     </style>
 
@@ -243,7 +201,7 @@
     <div id="container2">
         <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
             <div class="col-lg-12 text-center">
-                <h1 style="padding-top: 10px;">About</h1>
+                <h1 style="padding-top: 10px;">{About}</h1>
                 <hr>
 
                 Currently Under Construction.
@@ -260,7 +218,7 @@
     <div id="container3">
         <div class="col-lg-12 text-center">
 
-            <h1 style="padding-top: 10px;">Projects</h1>
+            <h1 style="padding-top: 10px;">{Projects}</h1>
             <hr>
             Coming Soon, till then check out my GitHub.
             <br>
@@ -278,7 +236,7 @@
                 <div class="container">
                     <div class="row ">
                         <div class="col-lg-12 text-center">
-                            <h1 style="padding-top: 10px;">Contact Me</h1>
+                            <h1 style="padding-top: 10px;">{Contact Me}</h1>
                             <hr>
                         </div>
                     </div>
