--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
                     <div class="row ">
                         <div class="col-lg-12 ">
 
-                            <form name="sentMessage" id="contactForm" novalidate>
+                            <form name="sentMessage" id="contactForm" novalidate action="https://formspree.io/baba.christine@gmail.com">
                                 <div class="row control-group">
                                     <div class="form-group col-lg-6 floating-label-form-group controls">
 
                                         <input type="text" class="form-control" placeholder="Name" id="name"
-                                               required
+                                               name="name" required
                                                data-validation-required-message="Please enter your name.">
                                         <p class="help-block text-danger"></p>
                                     </div>
@@ -256,7 +256,7 @@
                                     <div class="form-group col-lg-6 floating-label-form-group controls">
 
                                         <input type="email" class="form-control" placeholder="Email Address"
-                                               id="email" required
+                                               id="email" name="email" required
                                                data-validation-required-message="Please enter your email address.">
                                         <p class="help-block text-danger"></p>
                                     </div>
@@ -265,7 +265,8 @@
                                 <div class="row control-group">
                                     <div class="form-group col-lg-12 floating-label-form-group controls">
 
-                                            <textarea rows="5" class="form-control" placeholder="Message" id="message"
+                                            <textarea rows="5" class="form-control" placeholder="Message"
+                                                      name="message " id="message"
                                                       required
                                                       data-validation-required-message="Please enter a message."></textarea>
                                         <p class="help-block text-danger"></p>
