--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="row ">
                         <div class="col-lg-12 ">
 
-                            <form name="sentMessage" id="contactForm" novalidate action="https://formspree.io/baba.christine@gmail.com">
+                            <form name="sentMessage" id="contactForm" novalidate method="POST" action="https://formspree.io/baba.christine@gmail.com">
                                 <div class="row control-group">
                                     <div class="form-group col-lg-6 floating-label-form-group controls">
 
