--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                     <br>
                                     <div id="success"></div>
                                     <div class="row">
-                                        <div class="form-group col-lg-8">
+                                        <div class="form-group">
                                             <button type="submit" class="btn">Send</button>
                                         </div>
                                     </div>
