--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <script src="js/typed.js"></script>
 
     <style>
         #container-fluid {
@@ -34,7 +33,7 @@
 
         .content {
             position: absolute;
-            top: 20vh;
+            top: 18vh;
             z-index: 0;
             left: 0;
             padding: 0;
@@ -163,44 +162,6 @@
             -moz-animation: blink 0.7s infinite;
             animation: blink 0.7s infinite;
         }
-
-        @keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-webkit-keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-        @-moz-keyframes blink {
-            0% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-
-
     </style>
 
 
@@ -237,7 +198,14 @@
         <canvas id="canvas"></canvas>
         <div class="content">
 
-            <div id="row text-align-center"><p> Hello</p></div>
+            <div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">
+                <div class="row text-center" >
+                    <div class="col-lg-12  "style="margin-top: 75px">
+                       Welcome to My Site!
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
@@ -253,7 +221,7 @@
                 <br>Have a look around! <br>
                 &#x2661; Christine
 
-                <div><span class="elementType"></span></div>
+
             </div>
         </div>
 
