--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
     <style>
         #container-fluid {
             z-index: 0;
@@ -156,12 +155,6 @@
             width: 100%;
         }
 
-        .typed-cursor {
-            opacity: 1;
-            -webkit-animation: blink 0.7s infinite;
-            -moz-animation: blink 0.7s infinite;
-            animation: blink 0.7s infinite;
-        }
     </style>
 
 
@@ -199,9 +192,9 @@
         <div class="content">
 
             <div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">
-                <div class="row text-center" >
-                    <div class="col-lg-12  "style="margin-top: 75px">
-                       Welcome to My Site!
+                <div class="row text-center ">
+                    <div class="col-lg-12 fadeIn " style="margin-top: 75px ">
+                        Welcome to My Site!
                     </div>
                 </div>
             </div>
@@ -213,7 +206,7 @@
 
     <div id="container2">
         <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 text-center ">
                 <h1 style="padding-top: 10px;">{About}</h1>
                 <hr>
 
@@ -625,20 +618,9 @@
     ga('create', 'UA-88450814-1', 'auto');
     ga('send', 'pageview');
 
-
-    $(function () {
-        $(".elementType").typed({
-            strings: ["First sentence.", "Second sentence."],
-            typeSpeed: 1
-        });
-    });
-
-
 </script>
-<script
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
