--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style=" height: 100%">
+<html style=" height: 100%; overflow-x: hidden">
 <head>
 
     <script src="//load.sumome.com/"
