--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style=" height: 100%; overflow-x: hidden">
 <head>
-
+    <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
     <script src="//load.sumome.com/"
             data-sumo-site-id="bfe76379be76cac752d8d3bc8e81024a159a87ca902fbf7348db26de9f93a127" async="async"></script>
     <meta charset="UTF-8">
@@ -69,18 +69,46 @@
 
 
     <div id="container2">
-        <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
-            <div class="col-lg-12 text-center ">
-                <h1 style=" padding-top: 25px; padding-bottom: 10px; ;" >{About}</h1>
-                <hr>
 
-                Currently Under Construction.
-                <br>Have a look around! <br>
-                &#x2661; Christine
+        <div class="container-fluid">
+            <h1 style=" padding-top: 25px; padding-bottom: 10px; text-align: center;">{Hello, I'm Christine!}</h1>
+            <hr>
+            <div class="row">
+                <div class="col-lg-4" style="width: auto; padding-bottom: 25px;
+">
+                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive">
+                    <br>
+                </div>
+
+                <div class="col-lg-6" id="aboutMe" style="font-size: 20px; text-align: justify; padding-top: 25px">
+
+                    I'm a newly minted full-stack web developer focused on implementing MEAN stack technologies. I enjoy
+                    creating visually pleasing sites focused on simplicity, functionality, and ease of use.<br>
+
+                    I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
+                    satisfaction of solving problems that arise in any situation.
+
+
+                    <p style=" font-size: 30px; text-align: center">Favorite Technologies<br>
+                        <span style=" font-size: 50px" class="devicons devicons-html5" title="HTML5"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-css3" title="CSS"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-bootstrap" title="Bootstrap"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-javascript" title="Javascript"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-jquery" title="jQuery"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-nodejs" title="NodeJS"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-npm" title="NPM"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-mongodb" title="MongoDB"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-mysql" title="mySQL"></span>
+                        <span style=" font-size: 50px" class="devicons devicons-heroku" title="Heroku"></span>
+                    </p>
+                </div>
 
 
             </div>
+
+
         </div>
+
 
     </div>
 
