--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 
                 <div class="col-lg-6 " id="aboutMe" style="font-size: 20px;">
 
-                    I'm a newly minted full-stack web developer focused on implementing MEAN stack technologies. I enjoy
+                    I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I enjoy
                     creating visually pleasing sites focused on simplicity, functionality, and ease of use.<br>
 
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
                     satisfaction of solving problems that arise in any situation.
 
                     <div style="padding-top: 20px">
-                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Favorite Technologies<br>
+                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Preferred Tech Stack<br>
                             <span style=" font-size: 50px" class="devicons devicons-html5 hvr-bounce-in"
                                   title="HTML5"></span>
                             <span style=" font-size: 50px" class="devicons devicons-css3 hvr-bounce-in"
