--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
                 <div class="col-lg-6 " id="aboutMe" style="font-size: 20px;">
 
-                    I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I enjoy
+                    I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I
+                    enjoy
                     creating visually pleasing sites focused on simplicity, functionality, and ease of use.<br>
 
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
@@ -448,7 +449,7 @@
                             </div>
                         </div>
                         <div class="row ">
-                            <div class="col-lg-12 ">
+                            <div class="col-md-6 ">
 
                                 <form method="POST" action="http://formspree.io/baba.christine@gmail.com">
                                     <div class="row control-group">
@@ -487,6 +488,24 @@
                                     </div>
                                 </form>
                             </div>
+
+
+                            <div class="col-md-6">
+
+                                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
+                                    <i class="fa fa-linkedin-square fa-5x hvr-bounce-in" aria-hidden="true"
+                                       style="padding-right: 20px"></i></a>
+
+                                <a href="https://github.com/christin3" title="Github" target="_blank">
+                                    <i class="fa fa-github fa-5x hvr-bounce-in " aria-hidden="true"
+                                       style="padding-right: 20px"></i></a>
+
+                                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
+                                    <i class="fa fa-envelope-o fa-5x hvr-bounce-in" aria-hidden="true"
+                                       style="padding-right: 20px"></i></a>
+
+
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -500,16 +519,6 @@
         <footer>
             <p style="text-align: center;">
                 <br>
-
-                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
-                    <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-
-                <a href="https://github.com/christin3" title="Github" target="_blank">
-                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
-
-                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
-                    <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
-
             </p>
             <p style="text-align: center;">
                 © 2017 Christine Baba
