--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
         <div class="container-fluid">
             <h1 style=" padding-top: 25px; padding-bottom: 10px; text-align: center;">{Hello, I'm Christine!}</h1>
             <hr style="text-align: center;">
-            <div class="row">
-                <div class="col-lg-4" style="width: auto; padding-bottom: 25px;
-">
-                    <h1><img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot "
-                    ></h1>
+            <div class="row" style="margin-left: 25px; margin-right: 25px">
+
+                <div class="col-md-4 center-block" style="width: auto; padding-bottom: 25px;">
+                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">
                     <br>
                 </div>
 
-                <div class="col-lg-6 " id="aboutMe" style="font-size: 20px;">
+                <div class="col-md-6 center-block" id="aboutMe" style="font-size: 20px;">
 
                     I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I
                     enjoy
@@ -160,7 +159,7 @@
                         <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                             {Crystal Collector}
                             <br><br>
-                            <img src="assets/projects/gem.png" height="150" width="150" class="img-responsive"
+                            <img src="assets/projects/gem.png" height="175" width="150" class="img-responsive"
                                  alt="Crystal Collector">
                         </a>
                     </div>
@@ -186,7 +185,7 @@
                         <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                             {Triva Game}
                             <br><br>
-                            <img src="assets/projects/quiz.png" height="150" width="150" class="img-responsive"
+                            <img src="assets/projects/questions.png" height="150" width="150" class="img-responsive"
                                  alt="Trivia Game">
                         </a>
                     </div>
@@ -194,7 +193,7 @@
                         <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                             {To-Do List}
                             <br><br>
-                            <img src="assets/projects/todo.png" height="150" width="150" class="img-responsive"
+                            <img src="assets/projects/todo.png" height="150" width="125" class="img-responsive"
                                  alt="Angular Note Taker">
                         </a>
                     </div>
