--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             <hr style="text-align: center;">
             <div class="row" style="margin-left: 25px; margin-right: 25px">
 
-                <div class="col-md-4 center-block" style="width: auto; padding-bottom: 25px;">
-                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">
+                <div class="col-lg-4 center-block" style="width: auto; padding-bottom: 25px;">
+                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot " >
                     <br>
                 </div>
 
-                <div class="col-md-6 center-block" id="aboutMe" style="font-size: 20px;">
+                <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 20px;">
 
                     I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I
                     enjoy
