--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
                 <a class="nav-item nav-link" href="#container2">About</a>
                 <a class="nav-item nav-link" href="#container3">Projects</a>
                 <a class="nav-item nav-link" href="#container4">Contact</a>
-                <a class="nav-item nav-link"
-                   onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">
-                    Resume
-                </a>
+                <a class="nav-item nav-link" href="resume.html">Resume</a>
+
+
+
+                <!--<a class="nav-item nav-link"-->
+                   <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
+                    <!--Resume-->
+                <!--</a>-->
 
             </div>
 
